--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "watch": "vite build --watch",
     "serve": "serverless offline start --httpPort 3000"
   },
-  "dependencies": {
+  "devDependencies": {
     "@rollup/plugin-virtual": "^2.0.3",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.33",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
     "autoprefixer": "^10.4.1",
     "lorem-ipsum": "^2.0.4",
     "postcss": "^8.4.5",
     "serverless": "^2.70.0",
     "serverless-offline": "^8.3.1",
-    "serverless-python-requirements": "^5.2.2",
-    "svelte": "^3.44.3",
+    "svelte": "^3.45.0",
     "svelte-i18n": "^3.3.13",
-    "tailwindcss": "^3.0.10",
+    "tailwindcss": "^3.0.11",
     "vite": "^2.7.10"
+  },
+  "dependencies": {
+    "ejs": "^3.1.6"
   }
 }
