--- a/services/index/routes.yml
+++ b/services/index/routes.yml
@@ -1,40 +1,40 @@
 static:
-  handler: services.index.handler.static
+  handler: services/index/handler.static
   events:
     - httpApi:
         path: /static/{path+}
         method: get
 
 language:
-  handler: services.index.handler.language
+  handler: services/index/handler.language
   events:
     - httpApi:
         path: /language/{page}/{lang}.json
         method: get
 
 post:
-  handler: services.index.handler.post
+  handler: services/index/handler.post
   events:
     - httpApi:
         path: /post
         method: post
 
 login:
-  handler: services.index.handler.login
+  handler: services/index/handler.login
   events:
     - httpApi:
         path: /login
         method: post
 
 table:
-  handler: services.index.handler.table
+  handler: services/index/handler.table
   events:
     - httpApi:
         path: /table
         method: get
 
 api:
-  handler: services.index.handler.api
+  handler: services/index/handler.api
   events:
     - httpApi:
         path: /{path+}
