--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "devDependencies": {
     "@rollup/plugin-virtual": "^2.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
-    "autoprefixer": "^10.4.1",
+    "autoprefixer": "^10.4.2",
+    "i18next-parser": "^5.4.0",
     "lorem-ipsum": "^2.0.4",
     "postcss": "^8.4.5",
     "serverless": "^2.70.0",
     "serverless-offline": "^8.3.1",
     "svelte": "^3.45.0",
-    "svelte-i18n": "^3.3.13",
-    "tailwindcss": "^3.0.11",
+    "tailwindcss": "^3.0.12",
     "vite": "^2.7.10"
   },
   "dependencies": {
