--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "tailwindcss": "^3.0.13",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "vite": "^2.7.10",
+    "vite-tsconfig-paths": "^3.3.17"
   },
   "dependencies": {
     "ejs": "^3.1.6"
