--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
   "name": "vite-project",
-  "type": "module",
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
     "serve": "serverless offline start --httpPort 3000"
   },
   "devDependencies": {
-    "@formatjs/intl": "^1.18.2",
-    "@rollup/plugin-virtual": "^2.0.3",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
-    "autoprefixer": "^10.4.2",
     "lorem-ipsum": "^2.0.4",
-    "postcss": "^8.4.5",
-    "serverless": "^2.71.0",
+    "serverless": "^2.72.0",
     "serverless-offline": "^8.3.1",
-    "svelte": "^3.46.1",
-    "svelte-check": "^2.3.0",
-    "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.13",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.10",
-    "vite-tsconfig-paths": "^3.3.17"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "serverless-plugin-typescript": "^2.1.0"
   }
 }
