--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": ["./**/*.ts", "./**/*.svelte"]
 }
