--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "devDependencies": {
     "lorem-ipsum": "^2.0.4",
-    "serverless": "^2.72.0",
+    "serverless": "^2.72.1",
     "serverless-offline": "^8.3.1",
+    "serverless-plugin-typescript": "^2.1.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "ejs": "^3.1.6",
-    "serverless-plugin-typescript": "^2.1.0"
+    "ejs": "^3.1.6"
   }
 }
