break up some of the lambda handlers into individual files. This is the original design goal

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,8 @@ plugins:
   - serverless-plugin-typescript
 functions:
   - ${file(./backend/index/routes.yml)}
+  - static: ${file(./backend/static/routes.yml)}
+  - login: ${file(./backend/login/routes.yml)}
 
 custom:
   serverless-offline:
