--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "@rollup/plugin-virtual": "^2.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.36",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "svelte": "^3.46.3",
-    "svelte-check": "^2.3.0",
+    "postcss": "^8.4.6",
+    "prettier-plugin-tailwindcss": "^0.1.5",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.2",
     "svelte-preprocess": "^4.10.2",
-    "tailwindcss": "^3.0.17",
+    "tailwindcss": "^3.0.18",
     "vite": "^2.7.13",
     "vite-tsconfig-paths": "^3.3.17"
   }
